--- a/config.toml
+++ b/config.toml
@@ -34,4 +34,4 @@ enableGitInfo = true
   # Portable links meant to work with text editors and let you write markdown without {{< relref >}} shortcode
   # Theme will print warning if page referenced in markdown does not exists.
   BookPortableLinks = false
-
+BookMenuBundle = '/menu'
