--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://emmendezp.github.io/RGB"
 languageCode = "en-us"
-title = "RGB Template"
+title = "Computacion Visual 2022-2 RGB "
 theme = 'book'
 
 # Book configuration
