deploy: af6df7a5cb2528bca4eeec45745f8c1e6c8557ec

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "RGB Template",
-  "short_name": "RGB Template",
+  "name": "Computacion Visual 2022-2 RGB ",
+  "short_name": "Computacion Visual 2022-2 RGB ",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
